fix: sort inspectors by last name in selection lists

--- a/client/src/app/components/exceedance/dialog/ime-recheck-dialog/ime-recheck-dialog.component.html
+++ b/client/src/app/components/exceedance/dialog/ime-recheck-dialog/ime-recheck-dialog.component.html
@@ -25,7 +25,7 @@
 		</md-input-container>
 		<md-select [(ngModel)]="data.inspector" placeholder="Inspector" class="mat-select-row" style="width:100%">
 			<md-option *ngFor="let user of users" [value]="user">
-				{{user.firstname}} {{user.lastname}}
+				{{StringUtils.formatUserName(user)}}
 			</md-option>
 		</md-select>
 	</div>
