--- a/client/src/app/components/unverified-data/dialog/edit-ime-number-dialog/edit-ime-number-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-ime-number-dialog/edit-ime-number-dialog.component.html
@@ -3,10 +3,10 @@
 	<div class="dialog-form-container flex-container" fxLayout="row">
 		<div class="flex-item" fxFlex style="padding-right: 16px;">
 			<md-input-container class="md-input-full-width">
-				<input mdInput placeholder="IME Number" disabled type="text" [(ngModel)]="data.imeNumber">
+				<input mdInput placeholder="IME Number" disabled type="text" [value]="data.imeNumber">
 			</md-input-container>
 			<md-input-container class="md-input-full-width">
-				<input mdInput placeholder="Date" [value]="data.imeData[0].dateTime | date: 'shortDate'" disabled>
+				<input mdInput placeholder="Discovery Date" [value]="data.imeData[0].dateTime | date: 'shortDate'" disabled>
 			</md-input-container>
 			<md-input-container class="md-input-full-width">
 				<input mdInput placeholder="Methane (ppm)" type="number" [(ngModel)]="fields.methaneLevel">
