feat: added instrument to ISE dialog (#47)

--- a/client/src/app/components/exceedance/dialog/ime-recheck-dialog/ime-recheck-dialog.component.html
+++ b/client/src/app/components/exceedance/dialog/ime-recheck-dialog/ime-recheck-dialog.component.html
@@ -28,6 +28,11 @@
 				{{StringUtils.formatUserName(user)}}
 			</md-option>
 		</md-select>
+		<md-select [(ngModel)]="data.instrument" placeholder="Instrument S/N" class="mat-select-row" style="width:100%">
+			<md-option *ngFor="let instrument of instruments" [value]="instrument">
+				{{instrument.serialNumber}}
+			</md-option>
+		</md-select>
 	</div>
 </md-dialog-content>
 <md-dialog-actions>
