--- a/client/src/app/components/exceedance/ise-number/ise-number.component.html
+++ b/client/src/app/components/exceedance/ise-number/ise-number.component.html
@@ -80,6 +80,14 @@
 								</div>
 							</div>
 							<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+								<div class="info-card-data-key flex-item" fxFlex="96px">
+									Instrument
+								</div>
+								<div class="info-card-data-value truncate flex-item" fxFlex>
+									{{imeData.instrument?.serialNumber}}
+								</div>
+							</div>
+							<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
 								<div class="info-card-data-key flex-item" fxFlex="96px" style="height: 15px;">
 									CH<sub>4</sub> (ppm)
 								</div>
