--- a/client/src/app/components/unverified-data/dialog/edit-ise-number-dialog/edit-ise-number-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-ise-number-dialog/edit-ise-number-dialog.component.html
@@ -14,6 +14,11 @@
 			<md-input-container class="md-input-full-width">
 				<input mdInput placeholder="Methane (ppm)" type="number" [(ngModel)]="fields.methaneLevel">
 			</md-input-container>
+			<md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
+				<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
+					{{instrument.serialNumber}}
+				</md-option>
+			</md-select>
 			<md-input-container class="md-input-full-width">
 				<input mdInput placeholder="Description" type="text" [(ngModel)]="fields.description">
 			</md-input-container>
