--- a/client/src/app/components/unverified-data/dialog/edit-unverified-integrated-dialog/edit-unverified-integrated-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-integrated-dialog/edit-unverified-integrated-dialog.component.html
@@ -19,7 +19,7 @@
 		<md-input-container class="md-input-full-width">
 			<input mdInput placeholder="Volume (liters)" type="number" [(ngModel)]="fields.volume">
 		</md-input-container>
-		<md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
+		<md-select [(ngModel)]="fields.instrumentId" placeholder="Instrument S/N" class="mat-select-row" style="width:100%">
 			<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
 				{{instrument.serialNumber}}
 			</md-option>
