#49 disabled update button if fields are empty

--- a/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-probe-dialog/edit-unverified-probe-dialog.component.html
@@ -41,7 +41,7 @@
 	<button md-button (click)="cancel()">
 		CANCEL
 	</button>
-	<button md-button (click)="confirm()">
+	<button md-button (click)="confirm()" [disabled]="!canSubmit()">
 		UPDATE
 	</button>
 </md-dialog-actions>
