--- a/client/src/app/components/unverified-data/dialog/edit-unverified-warmspot-dialog/edit-unverified-warmspot-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-warmspot-dialog/edit-unverified-warmspot-dialog.component.html
@@ -24,7 +24,7 @@
 	<button md-button (click)="cancel()">
 		CANCEL
 	</button>
-	<button md-button (click)="confirm()">
+	<button md-button (click)="confirm()" [disabled]="!canSubmit()">
 		UPDATE
 	</button>
 </md-dialog-actions>
