--- a/client/src/app/components/exceedance/dialog/ime-grids-dialog/ime-grids-dialog.component.html
+++ b/client/src/app/components/exceedance/dialog/ime-grids-dialog/ime-grids-dialog.component.html
@@ -1,13 +1,16 @@
 <div md-dialog-title>Add/Remove Grids</div> 
 <md-dialog-content> 
 	<div class="flex-item" fxFlex style="padding-left: 16px;">
-		<div style="padding: 6px 0; font-weight: 500;">Grids</div>
+		<div fxLayout="row" style="padding: 6px 0;">
+			<div style="padding-right: 6px; font-weight: 500;">Grid(s):</div>
+			<div>{{listGrids()}}</div>
+		</div>
 		<div class="list-picker-box" style="height: 341px;">
 			<div *ngFor="let grid of wrappedGrids" class="list-item-container flex-container" fxLayout="row"> 
 				<div class="list-item-add-button flex-item" fxFlex="36px" fxFlexAlign="center">
-					<md-checkbox [(ngModel)]="grid.selected"></md-checkbox>
+					<md-checkbox [(ngModel)]="grid.selected" [disabled]="grid.locked"></md-checkbox>
 				</div>
-				<div class="list-item-info flex-item" fxFlex>
+				<div class="single-line list-item-info">
 					<div class="list-item-title">
 						{{grid.monitoringPoint.name}}
 					</div>
