--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -202,7 +202,7 @@
 										<md-checkbox></md-checkbox>
 									</div>
 									<div class="data-table-first-column truncate flex-item" fxFlex="5">
-										<span class="data-table-header-label">Grid</span>
+										<span class="data-table-header-label">Grid(s)</span>
 									</div>
 									<div class="data-table-column truncate flex-item" fxFlex>
 										<span class="data-table-header-label">Instrument</span>
