--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -235,7 +235,7 @@
 												</md-checkbox>
 											</div>
 											<div class="data-table-column truncate flex-item" fxFlex="5">
-												{{unverifiedWarmspotData.monitoringPoint?.name}}
+												{{listWarmspotGrids(unverifiedWarmspotData)}}
 											</div>
 											<div class="data-table-column truncate flex-item" fxFlex>
 												<div *ngIf="!unverifiedWarmspotData.instrument?.serialNumber" class="error-inline">
