--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -283,7 +283,7 @@
 										<span class="data-table-header-label">IME Number</span>
 									</div>
 									<div class="data-table-column truncate flex-item" fxFlex>
-										<span class="data-table-header-label">Grids</span>
+										<span class="data-table-header-label">Grid(s)</span>
 									</div>
 									<div class="data-table-column truncate flex-item" fxFlex>
 										<span class="data-table-header-label">Discovery Date</span>
